language/move-lang/tests/move_check/unit_test/test_and_test_only_annotation.unit_test.exp
error: 

   ┌── tests/move_check/unit_test/test_and_test_only_annotation.move:5:7 ───
   │
 5 │     #[test_only]
   │       ^^^^^^^^^ Function annotated as both #[test(...)] and #[test_only]. You need to declare it as either one or the other
   ·
 4 │     #[test(_a=@0x1, _b=@0x2)]
   │       ---------------------- Previously annotated here
   ·
 6 │     public fun boo(_a: signer, _b: signer) { }
   │                --- In this test
   │

